// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest serializer should not remove styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "red",
      "padding": 1,
    }
  }
/>
`;

exports[`Jest serializer should remove d-prop from path 1`] = `<path />`;

exports[`Jest serializer should remove functions as props 1`] = `
<View>
  <Dummy />
</View>
`;

exports[`Jest serializer should remove rnw-classnames 1`] = `
<View
  className="rn-notprop main main2"
/>
`;

exports[`Jest serializer should remove undefined props 1`] = `
<View>
  <Dummy
    False={false}
    Null={null}
    Zero={0}
  />
</View>
`;

exports[`Jest serializer should transform render props 1`] = `
<View>
  <Nested
    prop={<Path />}
  />
</View>
`;
